<resources>
    <string name="app_name">Speedy Desired Graph</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="about_text"> Программа позволяет составлять модели(восстановление функций по точкам). В основе лежит непараметрическая оценка регрессии. Имеются блоки отображения графиков, добавления информации, нахождения значения определенной точки, самостоятельной задача выборки, сохранения и загрузки данных и автоматической настройки модели. Будет возможность загрузки файлов из Интернета и сбор модели из готовых функций.</string>
    <string name="about_title">О программе</string>
    <string name="graph_title">График</string>
    <string name="select_title">Выборка</string>
    <string name="data_title">Данные</string>
    <string name="set_value"><b>Задайте значения</b></string>
    <string name="ready">Готово</string>
    <string name="menulist_title">Список </string>
    <string name="xfunction_title">Найти Y от X</string>
    <string name="start">Для создания модели и получения всех данных необходимо задать значения.</string>
</resources>
